# Transcoder

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  plans.md
.claude/: settings.local.json
.claude/code-quality-analyser/: SKILL.md
.claude/skills/app-package/: SKILL.md
.claude/skills/code-clean/: SKILL.md
.claude/skills/code-quality-analyser/: SKILL.md
.github/workflows/: deploy-gh-pages.yml
docs/: CHANGELOG.md
docs/gh-pages/: index.html  package-lock.json  package.json  vite.config.ts
docs/gh-pages/src/: App.tsx  constants.ts
docs/gh-pages/src/components/: Download.tsx  Faq.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  Presets.tsx  ScrollProgress.tsx  Showcase.tsx  ThemeToggle.tsx
docs/gh-pages/src/styles/: global.css
src/: App.css  App.layout.css  App.tsx  index.css  presetInfo.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  main.rs  models.rs  preset.rs
src-tauri/src/ffmpeg/: embedded.rs  ffprobe.rs  locator.rs  mod.rs  transcode.rs  validator.rs
src/components/: BatchQueue.tsx  EditFileDialog.css  EditFileDialog.tsx  ErrorMessage.css  ErrorMessage.tsx  FileCard.css  FileCard.tsx  FileDropZone.css  FileDropZone.tsx  FileQueue.css  FileQueue.tsx  FileSelector.tsx  PresetDropdown.css  PresetDropdown.tsx  ProgressDisplay.tsx  SettingsDialog.css  SettingsDialog.tsx  SidebarPanel.css  SidebarPanel.tsx  StatusBar.css  StatusBar.tsx  TimeRangeInput.css  TimeRangeInput.tsx
src/components/ui/: Dropdown.css  Dropdown.tsx  Modal.css  Modal.tsx
src/constants/: events.ts  messages.ts
src/hooks/: useFfmpegCheck.ts  useKeyboardShortcuts.ts  useModal.ts
src/types/: index.ts
src/utils/: logger.ts
