[package]
name = "transcoder"
version = "0.5.2"
description = "Transcoder - Video conversion tool for editing"
authors = ["Chang-Yo"]
edition = "2021"

[package.metadata.license]
expression = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-dir", "shell-open", "dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
uuid = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
